// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <hr
    className="big-spacer-top big-spacer-bottom"
  />
  <p>
    <strong>
      onboarding.analysis.auto_refresh_after_analysis.done
    </strong>
     
    onboarding.analysis.auto_refresh_after_analysis.auto_refresh
  </p>
  <p
    className="big-spacer-top"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.auto_refresh_after_analysis.set_up_pr_deco_and_ci"
      id="onboarding.analysis.auto_refresh_after_analysis.set_up_pr_deco_and_ci"
      values={
        Object {
          "link_see_tutorials": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/tutorials",
                "query": Object {
                  "id": "my-project",
                },
              }
            }
          >
            onboarding.analysis.auto_refresh_after_analysis.set_up_pr_deco_and_ci.see_tutorials
          </Link>,
        }
      }
    />
  </p>
  <p
    className="big-spacer-top"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.auto_refresh_after_analysis.check_these_links"
      id="onboarding.analysis.auto_refresh_after_analysis.check_these_links"
      values={
        Object {
          "link_branches": <Link
            onlyActiveOnIndex={false}
            rel="noopener noreferrer"
            style={Object {}}
            target="_blank"
            to="/documentation/branches/overview/"
          >
            onboarding.analysis.auto_refresh_after_analysis.check_these_links.branches
          </Link>,
          "link_pr_analysis": <Link
            onlyActiveOnIndex={false}
            rel="noopener noreferrer"
            style={Object {}}
            target="_blank"
            to="/documentation/analysis/pull-request/"
          >
            onboarding.analysis.auto_refresh_after_analysis.check_these_links.pr_analysis
          </Link>,
        }
      }
    />
  </p>
</Fragment>
`;

exports[`should render correctly: project admin 1`] = `
<Fragment>
  <hr
    className="big-spacer-top big-spacer-bottom"
  />
  <p>
    <strong>
      onboarding.analysis.auto_refresh_after_analysis.done
    </strong>
     
    onboarding.analysis.auto_refresh_after_analysis.auto_refresh
  </p>
  <p
    className="big-spacer-top"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.auto_refresh_after_analysis.set_up_pr_deco_and_ci.admin"
      id="onboarding.analysis.auto_refresh_after_analysis.set_up_pr_deco_and_ci.admin"
      values={
        Object {
          "link_project_settings": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/settings",
                "query": Object {
                  "category": "pull_request_decoration_binding",
                  "id": "my-project",
                },
              }
            }
          >
            onboarding.analysis.auto_refresh_after_analysis.set_up_pr_deco_and_ci.project_settings
          </Link>,
          "link_see_tutorials": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/tutorials",
                "query": Object {
                  "id": "my-project",
                },
              }
            }
          >
            onboarding.analysis.auto_refresh_after_analysis.set_up_pr_deco_and_ci.see_tutorials
          </Link>,
        }
      }
    />
  </p>
  <p
    className="big-spacer-top"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.auto_refresh_after_analysis.check_these_links"
      id="onboarding.analysis.auto_refresh_after_analysis.check_these_links"
      values={
        Object {
          "link_branches": <Link
            onlyActiveOnIndex={false}
            rel="noopener noreferrer"
            style={Object {}}
            target="_blank"
            to="/documentation/branches/overview/"
          >
            onboarding.analysis.auto_refresh_after_analysis.check_these_links.branches
          </Link>,
          "link_pr_analysis": <Link
            onlyActiveOnIndex={false}
            rel="noopener noreferrer"
            style={Object {}}
            target="_blank"
            to="/documentation/analysis/pull-request/"
          >
            onboarding.analysis.auto_refresh_after_analysis.check_these_links.pr_analysis
          </Link>,
        }
      }
    />
  </p>
</Fragment>
`;
